--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,7 @@
   "rules": {
     "react-hooks/rules-of-hooks": "error",
     "no-use-before-define": "off",
-    // "import/no-unresolved": "off",
+    "react/jsx-props-no-spreading": "off",
     "prettier/prettier": "error",
     "react-hooks/exhaustive-deps": "warn",
     "react/jsx-filename-extension": [
