--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,7 @@
       }
     ],
     "import/prefer-default-export": "off",
+    "import/no-duplicates": "off",
     "import/extensions": [
       "error",
       "ignorePackages",
